--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Space Invader</title>
+    <title>Space Invaders</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.55.2/phaser.min.js"></script>
+    <script src="js/gameLogic.js"></script>
     <script src="js/game.js"></script>
     <style>
         body {
